[Tf 54] - App 经历挖掘 基本信息
* add basic form UI

* fix some warnings

* move button, input and dropdown into separate components

* add education form

* 1. add smartresult test file; 2. some code cleanup;

* fix a test

* update snapshot

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -2,7 +2,9 @@
   "title": "智能创建",
 
   "basicInfo": "基本信息",
+  "enterBasicInfo": "请输入您的一些基本个人信息",
   "education": "教育背景",
+  "educationInfo": "请添加关于您教育背景的相关信息",
   "workXp": "项目经历",
   "projectXp": "项目经历",
   "otherXp": "其他经历",
