TF-64 add react-router-dom and a simple top nav (#14)
* chore: add react-router-dom and navigation sample

* chore: add unit tests for appSlicer

* chore: reorder folder structure

--- a/webapp/src/features/SmartResume/i18n/en.json
+++ b/webapp/src/features/SmartResume/i18n/en.json
@@ -1,3 +1,10 @@
 {
+  "title": "Smart Resume",
 
+  "basicInfo": "Basic information",
+  "education": "Education background",
+  "workXp": "Work experiences",
+  "projectXp": "Project experiences",
+  "otherXp": "Other experiences",
+  "certifications": "Skills/Certifications"
 }
