[TF-52] feat - 左边菜单来切换智能创建不同板块 (#26)
* feat: smart resume add side navbar - basic layout

* feat: smart resume add side navbar - add in styles

* chore: save for moving machines

* feat: add left nav - add in functionality

* feat - smart resume side nav - add obverser

* chore: remove demo components

Co-authored-by: Melody X <melodypxin@gmail.com>
Co-authored-by: Q Sang <Qitao_Sang@intuit.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -5,7 +5,7 @@
   "enterBasicInfo": "请输入您的一些基本个人信息",
   "education": "教育背景",
   "educationInfo": "请添加关于您教育背景的相关信息",
-  "workXp": "项目经历",
+  "workXp": "工作经历",
   "projectXp": "项目经历",
   "otherXp": "其他经历",
   "certifications": "技能证书"
