TF-0000 update snapshot, remove unused file (#30)
* 1. update UI; 2. add translated strings

* add a test snapshot

* remove unneeded file

* update snapshot, remove unused file

* correct an i18n string

* correct an i18n string

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -17,7 +17,7 @@
   "email": "邮箱",
   "enterEmail": "请填写您的邮箱地址",
   "tel": "联系电话",
-  "enterTel": "填写院校信息",
+  "enterTel": "输入您的联系电话",
   "city": "城市",
   "enterCity": "您现在的居住城市",
   "linkedin": "个人领英 Linkedin 链接",
