TF-70 Job matching (#45)
* feat - add in routing for jobs

* feat: allow communication between search and jobs list

* feat - style jobs list

* feat - add pagination for jobs

* feat: finish styling

* chore: add in unit tests and the score progress ring

Co-authored-by: Melody X <melodypxin@gmail.com>

--- a/webapp/src/features/App/i18n/en.json
+++ b/webapp/src/features/App/i18n/en.json
@@ -2,7 +2,7 @@
   "brand": "Tailoryourvc",
 
   "nav_item_smartresume": "Smart Resume",
-  "nav_item_example": "Counter Example",
+  "nav_item_jobmatcher": "Jobs",
 
   "language_toggle_zh": "中文",
   "language_toggle_en": "English"
