--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -2,7 +2,7 @@
   "brand": "快刀",
 
   "nav_item_smartresume": "智能创建",
-  "nav_item_example": "Counter Example",
+  "nav_item_jobmatcher": "工作匹配",
 
   "language_toggle_zh": "中文",
   "language_toggle_en": "English"
