Tf 42 加入 工作经历 项目经历 志愿者经历3个section (#48)
* 1. update UI; 2. add translated strings

* add a test snapshot

* remove unneeded file

* update snapshot, remove unused file

* correct an i18n string

* correct an i18n string

* add image upload modal + image editing feature

* add basic form save handler and validation

* add images + icons

* code refactor

* Code cleanup based on code review

* 1. add 404 gif; 2. update city list; 3. update education form with city as dropdown

* add 404 page

* update converter script

* code cleanup; still working in progress with testing

* many tiny UI update; also update unit test

* 1. code refactor to move isValid to slicers/common.js; 2. some code cleanup

* fix education/basic unit test

* add work experience; add radio button group

* add 3 other forms

* 1. refactor textarea component; 2. refactor radio component

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -52,6 +52,48 @@
   "save": "保存",
   "entryIsInvalid": "请输入正确的信息",
 
+  "enterNewExperience": "填写新经历",
+  "work": "工作或实习经历",
+  "workInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
+  "yes": "是",
+  "no": "否",
+  "workName": "岗位名称",
+  "enterWorkName": "请填写您的岗位名称",
+  "stillAtWork": "是否已离职？",
+  "companyName": "单位/公司名称",
+  "enterCompanyName": "请填写您所在的单位/公司名称",
+  "enterWorkDate": "入职日期",
+  "workCity": "岗位所在城市",
+  "country": "国家",
+  "workCountry": "岗位所在国家",
+  "workDetailsDescription": "岗位细节描述",
+  "enterWorkDetailsDescription": "说说您在职的时所做的事情",
+
+  "project":"专业项目经历",
+  "projectInfo":"请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
+  "participateRole":"参与身份",
+  "enterParticipateRole":"请填写所参与身份的名称",
+  "enterParticipateStatus":"请填写所参与身份的名称",
+  "endOrNot":"是否已结束？",
+  "projectStartDate":"项目开始时间",
+  "projectEndDate":"项目结束时间",
+  "projectCity":"项目所在城市",
+  "projectCountry":"项目所在国家",
+  "projectDetailsDescription":"项目细节描述",
+  "enterProjectDetailsDescription":"参与身份",
+  
+  "volunteerExperience":"志愿者经历",
+  "enterVolunteerExperience":"请您尽可能的表述您志愿者经历。从您最近经历开始说起。",
+  "leaveOrNot":"是否已离开？",
+  "institutionName":"机构名称",
+  "enterInstitutionName":"请填报名参与志愿者的机构的名称",
+  "volunteerStartDate":"志愿经历开始时间",
+  "volunteerEndDate":"志愿经历结束时间",
+  "experienceCity":"经历所在城市",
+  "experienceCountry":"经历所在国家",
+  "volunteerDetailsDescription":"志愿者经历细节描述",
+  "enterVolunteerDetailsDescription":"说说您在职的时所做的事情",
+
   "yymmdd": "年/月/日期",
   "monthFormat":"YYYY[年]MMMM",
   "dateDisplayFormat":"YYYY/MM/DD"
