--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -94,6 +94,14 @@
   "volunteerDetailsDescription":"志愿者经历细节描述",
   "enterVolunteerDetailsDescription":"说说您在职的时所做的事情",
 
+  "certificate": "技能证书",
+  "certificateInfo": "请添加关于您教育背景的相关信息",
+  "certificateName": "证书名称",
+  "enterCertificateName": "请输入证书的名称",
+  "validForever":"永久有效？",
+  "issueDate":"颁发时间/获得时间",
+  "expireDate":"有效期至",
+
   "yymmdd": "年/月/日期",
   "monthFormat":"YYYY[年]MMMM",
   "dateDisplayFormat":"YYYY/MM/DD"
