TF-32: Written Assisstant (#59)
* feat - add in assistant - add in basic trigger flow

* feat - written assistant - add in animation and everything

* feat - add to other forms

* fix: div overlapping and css z-index

Co-authored-by: Melody X <melodypxin@gmail.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -10,6 +10,8 @@
   "otherXp": "其他经历",
   "certifications": "技能证书",
 
+  "writeAssistant": "经历写作助手",
+
   "addNewExperience": "添加新经历",
 
   "uploadPhoto": "上传照片",
