TF-77 [App-我的简历] 主页的Design and Impl (#67)
* feat - update navigation

* chore: update snapshot

* feat - add in first impression

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/features/App/i18n/en.json
+++ b/webapp/src/features/App/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "brand": "Tailoryourvc",
 
-  "nav_item_smartresume": "Smart Resume",
+  "nav_item_resumehub": "Resume Hub",
   "nav_item_jobmatcher": "Jobs",
 
   "language_toggle_zh": "中文",
