--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -1,8 +1,8 @@
 {
-  "brand": "快刀",
+  "brand": "快刀简历",
 
-  "nav_item_smartresume": "智能创建",
-  "nav_item_jobmatcher": "工作匹配",
+  "nav_item_resumehub": "我的简历",
+  "nav_item_jobmatcher": "我的工作",
 
   "language_toggle_zh": "中文",
   "language_toggle_en": "English"
