--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -1,6 +1,5 @@
 {
   "title": "智能创建",
-
   "basicInfo": "基本信息",
   "enterBasicInfo": "请输入您的一些基本个人信息",
   "education": "教育背景",
@@ -9,11 +8,8 @@
   "projectXp": "项目经历",
   "otherXp": "其他经历",
   "certifications": "技能证书",
-
   "writeAssistant": "经历写作助手",
-
   "addNewExperience": "添加新经历",
-
   "uploadPhoto": "上传照片",
   "addPhoto": "添加头像",
   "samples": "什么样的照片试用于简历?",
@@ -33,8 +29,6 @@
   "enterWeblink": "请填写您的Github链接或作品集链接",
   "resetForm": "清空重填",
   "confirm": "确认",
-
-
   "enterSchoolInfo": "填写院校信息",
   "schoolName": "院校名称",
   "enterSchoolName": "请输入学校名字",
@@ -53,7 +47,6 @@
   "enterOtherAward": "请填写您在校期间所获得的其他奖项",
   "save": "保存",
   "entryIsInvalid": "请输入正确的信息",
-
   "enterNewExperience": "填写新经历",
   "work": "工作或实习经历",
   "workInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
@@ -71,54 +64,50 @@
   "workCountry": "岗位所在国家",
   "workDetailsDescription": "岗位细节描述",
   "enterWorkDetailsDescription": "说说您在职的时所做的事情",
-
-  "project":"专业项目经历",
-  "projectInfo":"请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
-  "participateRole":"参与身份",
-  "enterParticipateRole":"请填写所参与身份的名称",
-  "enterParticipateStatus":"请填写所参与身份的名称",
-  "endOrNot":"是否已结束？",
-  "projectStartDate":"项目开始时间",
-  "projectEndDate":"项目结束时间",
-  "projectCity":"项目所在城市",
-  "projectCountry":"项目所在国家",
-  "projectDetailsDescription":"项目细节描述",
-  "enterProjectDetailsDescription":"参与身份",
-  
-  "volunteerExperience":"志愿者经历",
-  "enterVolunteerExperience":"请您尽可能的表述您志愿者经历。从您最近经历开始说起。",
-  "leaveOrNot":"是否已离开？",
-  "institutionName":"机构名称",
-  "enterInstitutionName":"请填报名参与志愿者的机构的名称",
-  "volunteerStartDate":"志愿经历开始时间",
-  "volunteerEndDate":"志愿经历结束时间",
-  "experienceCity":"经历所在城市",
-  "experienceCountry":"经历所在国家",
-  "volunteerDetailsDescription":"志愿者经历细节描述",
-  "enterVolunteerDetailsDescription":"说说您在职的时所做的事情",
-
+  "project": "专业项目经历",
+  "projectInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
+  "participateRole": "参与身份",
+  "enterParticipateRole": "请填写所参与身份的名称",
+  "enterParticipateStatus": "请填写所参与身份的名称",
+  "endOrNot": "是否已结束？",
+  "projectStartDate": "项目开始时间",
+  "projectEndDate": "项目结束时间",
+  "projectCity": "项目所在城市",
+  "projectCountry": "项目所在国家",
+  "projectDetailsDescription": "项目细节描述",
+  "enterProjectDetailsDescription": "参与身份",
+  "volunteerExperience": "志愿者经历",
+  "enterVolunteerExperience": "请您尽可能的表述您志愿者经历。从您最近经历开始说起。",
+  "leaveOrNot": "是否已离开？",
+  "institutionName": "机构名称",
+  "enterInstitutionName": "请填报名参与志愿者的机构的名称",
+  "volunteerStartDate": "志愿经历开始时间",
+  "volunteerEndDate": "志愿经历结束时间",
+  "experienceCity": "经历所在城市",
+  "experienceCountry": "经历所在国家",
+  "volunteerDetailsDescription": "志愿者经历细节描述",
+  "enterVolunteerDetailsDescription": "说说您在职的时所做的事情",
   "certificate": "技能证书",
   "certificateInfo": "请添加关于您教育背景的相关信息",
   "certificateName": "证书名称",
   "enterCertificateName": "请输入证书的名称",
-  "validForever":"永久有效？",
-  "issueDate":"颁发时间/获得时间",
-  "expireDate":"有效期至",
-
+  "validForever": "永久有效？",
+  "issueDate": "颁发时间/获得时间",
+  "expireDate": "有效期至",
   "yymmdd": "年/月/日期",
-  "monthFormat":"YYYY[年]MMMM",
-  "dateDisplayFormat":"YYYY/MM/DD",
-
+  "monthFormat": "YYYY[年]MMMM",
+  "dateDisplayFormat": "YYYY/MM/DD",
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
     "workExperience": "工作经历",
     "studentWorkAndVolunteer": "学生工作和志愿服务",
     "current": "现今",
-    "editThemeColor":"编辑主题色",
-    "smartTranslation":"智能翻译",
-    "oneClickWholePage":"一键整页",
-    "downLoadResume":"下载简历"
-
+    "editThemeColor": "编辑主题色",
+    "smartTranslation": "智能翻译",
+    "oneClickWholePage": "一键整页",
+    "downloadResume": "下载简历",
+    "perparingResume": "生成中..",
+    "downLoadResume": "下载简历"
   }
 }
