Tf 78 - 简历编写小帖士 (#83)
* add preview component

* add preview content dynamic genrator

* Did some refactor of code structor

* refactor work experience

* update a current position logic

* Add control buttons group; add page broker (50%)

* add page break feature

* WIP: add react-pdf library

* some code cleanup

* add adjust to whole page feature

* Add some print css

* fix some eslint error

* fix 2 broken unit test

* Complete download PDF logic; code refactor; fix some merge conflict

* some cleanup

* fix a failed test

* cleanup some image

* remove some test data

* add resume tips

* add convert script

* some cleanup

* fix a typo

* fix some warnings

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -109,5 +109,8 @@
     "downloadResume": "下载简历",
     "perparingResume": "生成中..",
     "downLoadResume": "下载简历"
+  },
+  "resumeTips": {
+    "resumeTips": "简历编写小帖士"
   }
 }
