TF-105 feat: my job collection = static page (#114)
Co-authored-by: Joseph Jin <joseph@skyglobal.com>

--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -3,7 +3,7 @@
 
   "nav_item_resumehub": "我的简历",
   "nav_item_jobmatcher": "工作搜索",
-
+  "nav_item_jobcollction": "我的岗位",
   "language_toggle_zh": "中文",
   "language_toggle_en": "English"
 }
