feat - add in logout (#186)
* feat - add in logout

* try retrigger the build

Co-authored-by: xelody <melodypxin@gmail.com>

--- a/webapp/src/features/App/i18n/en.json
+++ b/webapp/src/features/App/i18n/en.json
@@ -5,5 +5,8 @@
   "nav_item_jobmatcher": "Jobs",
 
   "language_toggle_zh": "中文",
-  "language_toggle_en": "English"
+  "language_toggle_en": "English",
+
+  "logout": "Sign out",
+  "defaultInitial": "Unknown"
 }
