--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -5,5 +5,8 @@
   "nav_item_jobmatcher": "工作搜索",
   "nav_item_jobcollction": "我的岗位",
   "language_toggle_zh": "中文",
-  "language_toggle_en": "English"
+  "language_toggle_en": "English",
+
+  "logout": "登出",
+  "defaultInitial": "未知"
 }
