--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -112,5 +112,66 @@
   },
   "resumeTips": {
     "resumeTips": "简历编写小帖士"
-  }
+  },
+  "photoMessage": "如果您投递中国地区的岗位，建议您添加个人简历照片",
+  "personalWebsite":"个人网站",
+  "websiteMessage": "填写个人网站会显得更专业哟！",
+  "linkedinAccount": "领英账号",
+  "linkedinMessage": "填写领英账号会显得更专业哟！",
+  "resume": "简历",
+  "notAlign":"页数不工整",
+  "layoutMessage":"您的简历，尚未进行整页排版，请使用“一键整页”让我们帮您自动优化排版！",
+  "highestAwards": "所获最高奖项",
+  "highestAwardsMessage": "填写所获最高奖项显得更专业哟！",
+  "otherAwardMessage": "填写其他获得奖项显得更专业哟！",
+  "gpaMessageOne": "您的GPA在3.5以上，建议您填写，当作一个亮点来展示",
+  "gpaMessageTwo": "您的GPA，在3.0以下，不建议您添加到简历上",
+  "gpaMessageThree": "您的GPA在3-3.5之间，您可以填写在简历上呢",
+  "schoolRating1": "是中国985知名高校，世界排名前100，非常棒哟。",
+  "schoolRating2": "是中国211知名高校，世界排名前300，可以可以。",
+  "schoolRating3": "是地方特色院校，还不错哟。",
+  "schoolPopularity": "学校知名度",
+  "good": "挺好",
+  "verygood": "很好",
+  "extremegood": "非常好",
+  "certificationsMessage": "技能证书，是非常重要的资质证明，您这块背景较为薄弱，建议您查看快课，快速掌握专业技能，提升背景竞争力",
+  "expLengthOverTwo": "您已经提供3+段工作实习经历，数量充实哟，建议您查看经历写作助手，提高表达专业性",
+  "expLengthTwo": "您已经提供2段工作实习经历，数量上，还是可以的，建议您查看经历写作助手，提高表达专业性",
+  "expLengthOne": "您目前只有1段工作实习经历，显得比较单薄，如果可以的话，建议您再添加一段相关经历，提高竞争力；如果您想快速积攒行业级项目经历，请联系小助手",
+  "expLengthZero": "您目前没有工作实习经历，是一个明显软肋，如果可以的话，建议您再添加一段相关经历，提高竞争力；如果您想快速积攒行业级项目经历，请联系小助手",
+  "workExp": "工作实习经历",
+  "projectExp": "专业项目经历",
+  "otherExp": "其他经历",
+  "sorted": "时间排序",
+  "sortedMessage": "您的经历模块，还未按时间排序，“一键排序”帮您自动排序",
+  "employedAt1": "您曾经就职的单位",
+  "employedAt2": "，是行业",
+  "employedAt3": "龙头之一",
+  "employedAt4": "明星企业",
+  "employedAt5": "，这段经历含金量很棒哟！",
+  "nationalInfluence": "就业于全球知名单位！",
+  "globalInfluence": "就业于全国知名单位！",
+  "graduatedFrom": "您的毕业院校是{school}。{school}",
+  "ratingDetail": "简历强度分析详情",
+  "notEnter": "您没有填写",
+  "jumpTo": "前往",
+  "expVal": "经历含金量",
+  "tooLess": "数量过少",
+  "entireLayout": "简历整体版式",
+  "all": "全部",
+  "expLackOf": "经历详情缺乏",
+  "keywords": "专业术语",
+  "keywordsMessage": "您以下的工作经历详情描述没有用任何行业术语。请参考”写作助手”里面的写作建议进行修改！",
+  "expression": "表达专业度",
+  "exp": "经历",
+  "notQuantify": "成就表述未被量化",
+  "quantifyMessage": "您以下的工作经历详情描述没有用任何行业术语。请参考”写作助手”里面的写作建议进行修改！",
+  "hasProblem": "有问题",
+  "sort": "排序",
+  "workTitle": "工作/实习经历",
+  "projTitle": "项目经历",
+  "volTitle": "志愿者经历",
+  "infoComplete": "信息完整度",
+  "layout": "简历版式",
+  "expValue": "经历含金量"
 }
