Tf 94 智能创建header部分 (#180)
* add resume header section

* add resume header layout

* connect with API

* update styleing, fix a bug

* code review update

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -97,6 +97,13 @@
   "yymmdd": "年/月/日期",
   "monthFormat": "YYYY[年]MMMM",
   "dateDisplayFormat": "YYYY/MM/DD",
+  "resumeCompletion": "简历完成度",
+  "intensityScore": "强度评分",
+  "clickForDetails": "点击查看详情",
+  "score_A": "优秀",
+  "score_B": "良好",
+  "score_C": "及格",
+  "score_D": "薄弱",
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
