rework file upload page (#230)
Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -6,9 +6,12 @@
   "nav_item_jobcollction": "我的岗位",
   "language_toggle_zh": "中文",
   "language_toggle_en": "English",
+  "createResume": "创建简历",
   "createNewResume": "创建一份全新简历",
+  "chooseLanguage": "请选择简历语言",
   "resumeUpload": "我有简历了，我要上传",
-  "uploadYourResume": "上传您的简历",
+  "resumeUploadSupportType": "支持PDF/Word 文档，文件最大支持20MB",
+  "uploadYourResume": "从本地上传",
   "upload": "上传",
   "logout": "登出",
   "defaultInitial": "未知",
