feat: 我的岗位前后集成 (#170)
* feat: 我的岗位前后集成

* PR revised

* Update JobCollection.jsx

PR revision

* PR revision

* fix eslint and add crossenv to package json

--- a/webapp/src/features/JobCollection/i18n/zh.json
+++ b/webapp/src/features/JobCollection/i18n/zh.json
@@ -4,5 +4,7 @@
   "applied": "已经申请",
   "appliedDate": "申请日期",
   "jobLocation": "岗位所在地",
-  "applyJob": "申请工作"
+  "applyJob": "申请工作",
+  "tailoredJobs": "精修岗位",
+  "bookmarkedJobs": "收藏岗位"
 }
