woody's change request

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -9,13 +9,15 @@
   "otherXp": "其他经历",
   "certifications": "技能证书",
   "writeAssistant": "经历写作助手",
+  "addNewEducationExperience": "添加教育背景",
+  "addNewCertificate": "添加证书",
   "addNewExperience": "添加新经历",
   "uploadPhoto": "上传照片",
   "addPhoto": "添加头像",
   "samples": "什么样的照片试用于简历?",
   "cnName": "中文姓名",
   "enterCnName": "请输入您的中文全名",
-  "enName": "英文称呼",
+  "enName": "英文名称",
   "enterEnName": "First & Last Name",
   "email": "邮箱",
   "enterEmail": "请填写您的邮箱地址",
@@ -39,7 +41,7 @@
   "enterMajor": "输入所在的专业",
   "degree": "学历",
   "enterDegree": "请输入您获得的学历",
-  "schoolCity": "学院所在城市",
+  "schoolCity": "所在城市",
   "schoolCountry": "学校所在国家",
   "highestAward": "所获最高奖项 (有任何奖项都是加分好事！)",
   "enterHighestAward": "请填写您在校期间所获得的最高奖项",
