TF-181 我的简历重做

--- a/webapp/src/features/ResumeHub/i18n/zh.json
+++ b/webapp/src/features/ResumeHub/i18n/zh.json
@@ -3,7 +3,7 @@
   "new_resume_start": "开始创建",
 
   "hub_title": "我的简历",
-  "hub_action": "+ 添加新的简历",
+  "hub_action": "+ 添加新简历",
 
   "hub_item_edit": "编辑内容",
   "hub_item_download": "下载简历",
