加入React 和 www 2个general page (#264)
* add 500 general error page

* add www html page

* update images

* fix a css issue

* splite 500 error page into a component

* cleanup

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>
Co-authored-by: Q Sang <600722+blaxkmaze@users.noreply.github.com>
Co-authored-by: A.L <ssliu@ualberta.ca>

--- a/webapp/src/features/SpecialPages/i18n/en.json
+++ b/webapp/src/features/SpecialPages/i18n/en.json
@@ -1,4 +1,5 @@
 {
   "notFoundPageContent": "Page not found",
+  "generalErrorMessage": "Something went wrong, please contact system admin for more details",
   "refresh": "Refresh"
 }
