--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -15,6 +15,9 @@
   "upload": "上传",
   "logout": "登出",
   "defaultInitial": "未知",
+  "name_it":"请您为这份新简历命名",
+  "name_suggestion":"建议用简历类别，比如 [咨询] [投行] [战投] 或者是 [岗位名称+公司名称] 的形式来来命名以方便查询",
+  "confirm":"确认",
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
