update progress header (#332)
Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -99,13 +99,15 @@
   "yymmdd": "年/月/日期",
   "monthFormat": "YYYY[年]MMMM",
   "dateDisplayFormat": "YYYY/MM/DD",
-  "resumeCompletion": "简历完成度",
-  "intensityScore": "强度评分",
-  "clickForDetails": "点击查看详情",
+  "clickForDetails": "点击查看强度详情",
   "score_A": "优秀",
   "score_B": "良好",
   "score_C": "及格",
   "score_D": "薄弱",
+  "score_A_MSG": "简历强度：优秀，简历信息完整缺表达专业，牛人你真棒！",
+  "score_B_MSG": "简历强度：良好，简历信息完整，参考‘写作助手’专业术语继续提升吧！",
+  "score_C_MSG": "简历强度：及格，简历信息有所缺失，继续加油哦！",
+  "score_D_MSG": "简历强度：及格，简历信息有所缺失，继续加油哦！",
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
