--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -111,8 +111,14 @@
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
+    "educationBackground": "教育背景",
     "workExperience": "工作经历",
-    "studentWorkAndVolunteer": "学生工作和志愿服务",
+    "studentWorkAndVolunteer": "志愿服务",
+    "certificateAndAward": "技能证书 & 获得荣誉",
+    "awards": "获得荣誉",
+    "certificate": "技能证书",
+    "validForever": "永久有效",
+    "expiredAt": "到期",
     "current": "现今",
     "editThemeColor": "编辑主题色",
     "smartTranslation": "智能翻译",
