简历预览格式调整  一键整页 调整 (#341)
* many update with resume preview

* code cleanup

* fix failed test

* fix a CI build issue

* fix avatar upload bug

* code cleanup

* fix upload image issue on the first load

* update a test

* code cleanup

Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>

--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -21,14 +21,23 @@
   "RPreview": {
     "linkedinLink": "领英链接",
     "githubLink": "Github链接",
+    "educationBackground": "教育背景",
     "workExperience": "工作经历",
-    "studentWorkAndVolunteer": "学生工作和志愿服务",
+    "projectExperience": "项目经历",
+    "studentWorkAndVolunteer": "志愿服务",
+    "certificateAndAward": "技能证书 & 获得荣誉",
+    "awards": "获得荣誉",
+    "certificate": "技能证书",
+    "validForever": "永久有效",
+    "expiredAt": "到期",
     "current": "现今",
     "editThemeColor": "编辑主题色",
     "smartTranslation": "智能翻译",
     "oneClickWholePage": "一键整页",
     "downloadResume": "下载简历",
     "perparingResume": "生成中..",
-    "downLoadResume": "下载简历"
+    "downLoadResume": "下载简历",
+    "linkedIn": "领英链接",
+    "weblink": "项目集链接"
   }
 }
