--- a/webapp/src/features/JobCollection/i18n/zh.json
+++ b/webapp/src/features/JobCollection/i18n/zh.json
@@ -6,5 +6,7 @@
   "jobLocation": "岗位所在地",
   "applyJob": "申请工作",
   "tailoredJobs": "精修岗位",
-  "bookmarkedJobs": "已收藏岗位"
+  "bookmarkedJobs": "已收藏岗位",
+  "sortByTimestampDecending": "发布日期（近-远）",
+  "sortByTimestampAscending": "发布日期（远-近）"
 }
