--- a/webapp/src/features/JobCollection/i18n/en.json
+++ b/webapp/src/features/JobCollection/i18n/en.json
@@ -2,7 +2,9 @@
     "heading": "我的岗位",
     "all": "全部",
     "applied": "已经申请",
-    "appliedDate": "申请日期",
+    "postedDate": "发布日期",
     "jobLocation": "岗位所在地",
-    "applyJob": "申请工作"
+    "applyJob": "申请工作",
+    "sortByTimestampDecending": "发布日期（近-远）",
+    "sortByTimestampAscending": "发布日期（远-近）"
   }
