refactor + add tests

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -196,7 +196,7 @@
   "expression": "表达专业度",
   "exp": "经历",
   "notQuantify": "成就表述未被量化",
-  "quantifyMessage": "您以下的{exp}经历详情描述没有用任何行业术语。请参考”写作助手”里面的写作建议进行修改！",
+  "quantifyMessage": "您以下的{exp}经历详情描述没有用任何量化关键词。请参考”写作助手”里面的写作建议进行修改！",
   "hasProblem": "有问题",
   "sort": "排序",
   "workTitle": "工作/实习经历",
@@ -215,5 +215,9 @@
     "workXp": "工作实习",
     "projectXp": "项目",
     "otherXp": "志愿者"
-  }
+  },
+  "quantifyMetMessage": "您以下经历描述，对经历过程、结果，进行了量化表达，可以可以！！介绍过往经历，量化过程以及成就，展示了结果导向的表述思路，是现实工作场景中非常倡导的，您还可以参考“经历撰写助手”，进一步完善经历描述：",
+  "quantifyMetHeader": "经历详情已量化表达！",
+  "keywordsMetHeader": "经历详情已使用专业术语！",
+  "keywordsMetMessage": "您以下经历描述，使用到了专业术语，非常棒！！HR或者ATS，会通过捕捉专业术语，来判断您的背景资质，与岗位要求，是否吻合，您还可以参考“经历撰写助手”，进一步提炼经历描述："
 }
