--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -219,5 +219,6 @@
   "quantifyMetMessage": "您以下经历描述，对经历过程、结果，进行了量化表达，可以可以！！介绍过往经历，量化过程以及成就，展示了结果导向的表述思路，是现实工作场景中非常倡导的，您还可以参考“经历撰写助手”，进一步完善经历描述：",
   "quantifyMetHeader": "经历详情已量化表达！",
   "keywordsMetHeader": "经历详情已使用专业术语！",
-  "keywordsMetMessage": "您以下经历描述，使用到了专业术语，非常棒！！HR或者ATS，会通过捕捉专业术语，来判断您的背景资质，与岗位要求，是否吻合，您还可以参考“经历撰写助手”，进一步提炼经历描述："
+  "keywordsMetMessage": "您以下经历描述，使用到了专业术语，非常棒！！HR或者ATS，会通过捕捉专业术语，来判断您的背景资质，与岗位要求，是否吻合，您还可以参考“经历撰写助手”，进一步提炼经历描述：",
+  "keyword": "关键字："
 }
