some css update, space adjustment, variable rename, bug fix (#361)
Co-authored-by: Oscar Zhang <zsyoscar@gamil.com>
Co-authored-by: A.L <ssliu@ualberta.ca>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -68,9 +68,8 @@
   "enterWorkDetailsDescription": "说说您在职的时所做的事情",
   "project": "项目经历",
   "projectInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
-  "participateRole": "参与身份",
-  "enterParticipateRole": "请填写所参与身份的名称",
-  "enterParticipateStatus": "请填写所参与身份的名称",
+  "participateRole": "项目名称",
+  "enterParticipateRole": "请填写所参与项目的名称",
   "endOrNot": "是否已结束？",
   "projectStartDate": "项目开始时间",
   "projectEndDate": "项目结束时间",
