Tf 340 证书文字调整 (#377)
* feat: 更新文字内容

* feat: update zh.json

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -50,6 +50,7 @@
   "save": "保存",
   "entryIsInvalid": "请输入正确的信息",
   "enterNewExperience": "填写新经历",
+  "enterNewCertificate": "填写新证书",
   "work": "工作或实习经历",
   "workInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
   "yes": "是",
