feat: 简历创建页调整 (#379)
Co-authored-by: Oscar Zhang <zsyoscar@gmail.com>

--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -15,8 +15,8 @@
   "uploadPhoto": "上传照片",
   "addPhoto": "添加头像",
   "samples": "什么样的照片试用于简历?",
-  "cnName": "中文姓名",
-  "enterCnName": "请输入您的中文全名",
+  "cnName": "姓名/ First Name + Last Name",
+  "enterCnName": "请输入您的姓名/ First Name + Last Name",
   "enName": "英文名称",
   "enterEnName": "First & Last Name",
   "email": "邮箱",
@@ -36,7 +36,7 @@
   "enterSchoolName": "请输入学校名字",
   "graduateGPA": "毕业GPA",
   "enterSchoolDate": "入学日期",
-  "graduateDate": "毕业日期",
+  "graduateDate": "(预期）毕业日期",
   "major": "专业",
   "enterMajor": "输入所在的专业",
   "degree": "学历",
@@ -70,7 +70,9 @@
   "project": "项目经历",
   "projectInfo": "请您尽可能的表述您前10份的工作/实习/项目经历。从您最近经历开始说起。",
   "participateRole": "项目名称",
+  "roleName": "岗位名称",
   "enterParticipateRole": "请填写所参与项目的名称",
+  "enterRole": "请填写所参与岗位名称",
   "endOrNot": "是否已结束？",
   "projectStartDate": "项目开始时间",
   "projectEndDate": "项目结束时间",
