--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -33,6 +33,8 @@
     "current": "现今",
     "editThemeColor": "编辑主题色",
     "smartTranslation": "智能翻译",
+    "translationEN": "English",
+    "translationCN": "中文版式",
     "oneClickWholePage": "一键整页",
     "downloadResume": "下载简历",
     "perparingResume": "生成中..",
