Revert "fix resume download bug (#380)"
This reverts commit fa7802a712f4dfd4db574726f48d2b0716ebb8a8.

--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -38,7 +38,7 @@
     "oneClickWholePage": "一键整页",
     "downloadResume": "下载简历",
     "perparingResume": "生成中..",
-    "downloadResume": "下载简历",
+    "downLoadResume": "下载简历",
     "linkedIn": "领英链接",
     "weblink": "项目集链接",
     "createResume": "开始创建"
