--- a/webapp/src/features/App/i18n/zh.json
+++ b/webapp/src/features/App/i18n/zh.json
@@ -36,8 +36,9 @@
     "translationEN": "English",
     "translationCN": "中文版式",
     "oneClickWholePage": "一键整页",
-    "perparingResume": "生成中..",
     "downloadResume": "下载简历",
+    "perparingResume": "生成中..",
+    "downLoadResume": "下载简历",
     "linkedIn": "领英链接",
     "weblink": "项目集链接",
     "createResume": "开始创建"
