--- a/webapp/src/features/SmartResume/i18n/zh.json
+++ b/webapp/src/features/SmartResume/i18n/zh.json
@@ -127,8 +127,9 @@
     "translationEN": "English",
     "translationCN": "中文版式",
     "oneClickWholePage": "一键整页",
-    "perparingResume": "生成中..",
     "downloadResume": "下载简历",
+    "perparingResume": "生成中..",
+    "downLoadResume": "下载简历",
     "linkedIn": "领英链接",
     "weblink": "项目集链接"
   },
